--- a/SistemasOperacionais-CodigoAberto.html
+++ b/SistemasOperacionais-CodigoAberto.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="utf-8">
+        <meta name="Viewport" content="width=device-width, initial-scale=1-0">
         <title>Sistemas Operacionais de Código Aberto</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
